# railroad

./: .gitignore  .gitmodules  BUILD.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  Pipes.h  Results.h  main.cpp  main_benchmark.cpp  main_combined.cpp  main_fragment.cpp
src/base/: CloudProcessor.cpp  CloudProcessor.h  ErrorProcessor.cpp  ErrorProcessor.h  MultiResultCloudProcessor.cpp  MultiResultCloudProcessor.h  SingleResultCloudProcessor.cpp  SingleResultCloudProcessor.h
src/dim2/: Dim2Helper.cpp  Dim2Helper.h  ImageProcessor.h  ImportantPartFinderProcessor.cpp  ImportantPartFinderProcessor.h  Projection.cpp  Projection.h  StraightTrackPartFinderProcessor.cpp  StraightTrackPartFinderProcessor.h  TrackFinderProcessor.cpp  TrackFinderProcessor.h
src/filters/: AboveFilter.cpp  AboveFilter.h  BandPassFilter.cpp  BandPassFilter.h  CableDistanceFilter.cpp  CableDistanceFilter.h  CantileverFilter.cpp  CantileverFilter.h  CorrigateCentroidsFilter.cpp  CorrigateCentroidsFilter.h  CutFilter.cpp  CutFilter.h  CylinderFilter.cpp  CylinderFilter.h  DensityFilter.cpp  DensityFilter.h  EuclideanClusterFilter.cpp  EuclideanClusterFilter.h  FragmentationFilter.cpp  FragmentationFilter.h  GroundFilter.cpp  GroundFilter.h  GrowthFilter.cpp  GrowthFilter.h  HeightFilter.cpp  HeightFilter.h  Hough3dFilter.cpp  Hough3dFilter.h  LimiterFilter.cpp  LimiterFilter.h  MaxHeightFilter.cpp  MaxHeightFilter.h  MinDistanceClusterFilter.cpp  MinDistanceClusterFilter.h  MinHeightFilter.cpp  MinHeightFilter.h  OutlierFilter.cpp  OutlierFilter.h  RailTrackFilter.cpp  RailTrackFilter.h  (+12 more)
src/helpers/: BenchmarkHelper.cpp  BenchmarkHelper.h  HoughHelper.cpp  HoughHelper.h  LASClass.h  LASHelper.cpp  LASHelper.h  LogHelper.cpp  LogHelper.h  PCLHelper.cpp  PCLHelper.h  SeedHelper.cpp  SeedHelper.h
src/piping/: ProcessorPipe.cpp  ProcessorPipe.h  ProcessorPipeBunch.cpp  ProcessorPipeBunch.h
